# PreCommitLaTeX

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  MANIFEST.in  README.md  setup.cfg
precommitlatex/: __init__.py  check_chktex.py  check_weasel_words.py  weasel-words.txt
