[metadata]
name = precommitlatex
version = 0.0.1
description = Pre-Commit hooks for LaTeX documents.
url = https://github.com/christopherdoyle/PreCommitLaTeX
author = Christopher Doyle
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.11
include_package_data = True

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    check-weasel-words = precommitlatex.check_weasel_words:main
